[gd_scene load_steps=6 format=2]

[ext_resource path="res://LabelNiveles.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/SpaceShip.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utilidades/espaciovacio.tscn" type="PackedScene" id=4]
[ext_resource path="res://ModelLevel.gd" type="Script" id=5]

[node name="ModelLevel" type="Node2D"]
script = ExtResource( 5 )

[node name="SpaceShip" parent="." instance=ExtResource( 3 )]
position = Vector2( 510.531, 500.632 )

[node name="espaciovacio" parent="." instance=ExtResource( 4 )]

[node name="espaciovacio2" parent="." instance=ExtResource( 4 )]
position = Vector2( -1.41425, 632.153 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 156.978, -2.828 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="TimerBoss" type="Timer" parent="."]
wait_time = 45.0
one_shot = true
autostart = true

[node name="PositionBoss" type="Position2D" parent="."]

[node name="Control" parent="." instance=ExtResource( 1 )]
[connection signal="elixir_ganado" from="SpaceShip" to="." method="_on_SpaceShip_elixir_ganado"]
[connection signal="tiro_al_jefe" from="SpaceShip" to="." method="_on_SpaceShip_tiro_al_jefe"]
[connection signal="area_entered" from="espaciovacio2" to="." method="_on_espaciovacio2_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerBoss" to="." method="_on_TimerBoss_timeout"]
